kubernetes/ckad/traefik-ingress-controller/ingressClass-traefik.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata: 
  name: traefik-lb
spec: 
  controller: traefik.io/ingress-controller
