kubernetes/ckad/traefik-ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: "traefik-lb"
  rules:
    - host: nginx.fritz.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: nginx
              servicePort: 80
